Changelog for the vim-perl package

1.??
====================================
[ENHANCEMENTS]
perl5:

Fix overzealous matching of /^package/ inside Pod (Hinrik)

Added xs.vim.

[FIXES]
Minor tweak to p6RxCharClass.  Thanks, Arne Skjærholt.

[TESTING]
Added a test harness in t/ (try "make test"). Moved example code
to t_source/ (Hinrik)


1.00    Tue Aug  4 21:38:31 CDT 2009
====================================
[ENHANCEMENTS]
perl5:

Pulled in the rest of mauke's improvements. This fixes issues
with q() ops and its various brackets (Hinrik)

Add spell checking to the comments syntax group.

Highlight method calls on __PACKAGE__ (Hinrik)

Allow whitespace around autoquoted hash keys (Hinrik)

Fix highlighting of //= from Perl 5.10 (Hinrik)

added 'parent' keyword for perl5.

[BUILDING]
Add a tarball target to the Makefile.  Thanks to Mike Kelly for
contributions.

Add Nick Hibma's perl-regression.pl to ease testing.